--- a/kafka-avro-consumer/pom.xml
+++ b/kafka-avro-consumer/pom.xml
@@ -65,6 +65,14 @@
 			<version>${confluent.version}</version>
 		</dependency>
 
+		<!-- Pact Consumer Dependency -->
+		<dependency>
+			<groupId>au.com.dius.pact.consumer</groupId>
+			<artifactId>junit5</artifactId>
+			<version>4.6.5</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
