--- a/kafka-avro-producer/src/main/resources/application.properties
+++ b/kafka-avro-producer/src/main/resources/application.properties
@@ -27,5 +27,8 @@ kafka.topic.name=student-data
 #spring.kafka.producer.properties.schema.registry.ssl.truststore.password=password
 
 
-key.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
-value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+#key.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+#value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+
+
+pact.verifier.publishResults=true
